@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.antenna.gr" version="1.2.2" name="ANT1 Player" provider-name="Twilight0">
+<addon id="plugin.video.antenna.gr" version="1.2.3" name="ANT1 Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="1.3.4" />
+		<import addon="script.module.tulip" version="1.4.0" />
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -19,43 +19,8 @@
 		<website>http://www.antenna.gr/</website>
         <size>692701</size>
 		<news>
-[B]1.2.2[/B]
-- Strengthened live resolver with direct urls as fallback
-- Option available to utilize web page resolver for live stream
-- Clear function cache action
-- Various cosmetics
-
-[B]1.2.1[/B]
-- Minor correction in live resolver
-
-[B]1.2.0[/B]
-- Enhanced live stream resolver
-- Added resolver for VOD content when called from other addons
-- Merged Hebrew translation thanks to "Eng2Heb"
-
-[B]1.1.3[/B]
-- Cosmetics
-- Tweaks in addon.xml
-
-[B]1.1.2[/B]
-- Cosmetics
-
-[B]1.1.1[/B]
-- Rebased to utilize tulip libraries
-
-[B]1.1.0[/B]
-- Tweaked sections
-- Added new add-on screenshots
-
-[B]1.0.2[/B]
-- Re-work of addon (new API)
-- Re-work of artwork (new indent)
-
-[B]1.0.1[/B]
-- Code cosmetics
-
-[B]1.0.0[/B]
-- Initial version
+[B]1.2.3[/B]
+- Added new fallback urls for live
 		</news>
 		<assets>
 			<icon>icon.png</icon>
